# LAzy_LABA_4

./: CMakeLists.txt
LABA_2/: arraySequence.h  dynamicArray.h  i_enumerable.h  i_enumerator.h  immutableArraySequence.h  immutableListSequence.h  linkedList.h  listSequence.h  mutableArraySequence.h  mutableListSequence.h  option.h  sequence.h  sequence_print.h
src/: main.cpp
src/fsm/: state_machine.h
src/generators/: append_generator.h  concat_generator.h  filter_generator.h  generator.h  insert_at_generator.h  map_generator.h  prepend_generator.h  rule_generator.h  sub_generator.h  take_generator.h  zip_generator.h
src/lazy/: lazy_sequence.h
src/streams/: sequence_streams.h
src/utils/: cardinal.h  pair.h  windowed_cache.h
test/: test.cpp  test_cardinal.cpp  test_fsm.cpp  test_lazy_manual.cpp  test_sliding_cache.cpp  test_streams.cpp
